--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -899,13 +899,16 @@ EstimateScreen As screen:
 
                     DataCardValue4 As text:
                         BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                        Default: =formattedNumber
+                        Default: |-
+                            =If(IsBlank(Parent.Default), VarformattedNumber, If(VarchangeNumber, VarformattedNumber, Text(Parent.Default, "[$-en-US](###) ###-####")))
                         DelayOutput: =true
                         DisplayMode: =Parent.DisplayMode
                         Format: =TextFormat.Number
+                        HintText: |
+                            ="###-###-####"
                         MaxLength: =10
                         OnChange: |-
-                            =Set(formattedNumber, Text(Value(DataCardValue4.Text), "[$-en-US](###) ###-####"));
+                            =If(Len(DataCardValue4.Text)=10, Set(VarformattedNumber, Text(Value(DataCardValue4.Text), "[$-en-US](###) ###-####"));Set(VarchangeNumber, true), If(!IsBlank(DataCardValue4.Text) && Len(DataCardValue4.Text)<>10, Set(Varerrormessage, true); Set(VarchangeNumber, false)))
                         PaddingLeft: =5
                         RadiusBottomLeft: =0
                         RadiusBottomRight: =0
@@ -941,6 +944,15 @@ EstimateScreen As screen:
                         Wrap: =false
                         Y: =DataCardKey4.Y
                         ZIndex: =4
+
+                    Label5 As label:
+                        Height: =39
+                        Text: =VarformattedNumber
+                        Visible: =VarchangeNumber
+                        Width: =514
+                        X: =175
+                        Y: =10
+                        ZIndex: =5
 
             ctnButtonES As groupContainer.verticalAutoLayoutContainer:
                 AlignInContainer: =AlignInContainer.SetByContainer
