--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -749,7 +749,9 @@ EstimateScreen As screen:
                         ZIndex: =5
 
                 CommunicatedtoCustomer As typedDataCard.comboBoxOptionSetSingleEditCard:
+                    BorderColor: =RGBA(202, 202, 202, 1)
                     BorderStyle: =BorderStyle.Solid
+                    BorderThickness: =0
                     DataField: ="crd59_communicatedtocustomer"
                     Default: =ThisItem.CommunicatedToCustomer
                     DisplayMode: =Parent.DisplayMode
@@ -797,7 +799,7 @@ EstimateScreen As screen:
                         Font: =Font.Arial
                         HoverBorderColor: =
                         HoverColor: =RGBA(0, 0, 0, 1)
-                        OnCheck: =Set(VarCommunication,true)
+                        OnCheck: =Set(VarCommunication,true);Reset(DataCardValue3);Reset(IntxtContactNumberES);
                         OnUncheck: =Set(VarCommunication,false);
                         PressedBorderColor: =
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
@@ -807,22 +809,31 @@ EstimateScreen As screen:
                         ZIndex: =5
 
                 "'CustomerName _DataCard1' As typedDataCard.textualEditCard":
-                    BorderColor: =RGBA(0, 0, 0, 1)
+                    BorderColor: =RGBA(202, 202, 202, 1)
                     BorderStyle: =BorderStyle.Solid
+                    BorderThickness: =0
                     DataField: ="shlrf_customername"
                     Default: =ThisItem.'CustomerName '
                     DisplayMode: =Parent.DisplayMode
                     DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_customername")
-                    Fill: =RGBA(0, 0, 0, 0)
+                    Fill: =RGBA(255, 255, 255, 1)
                     Height: =50
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_customername")
                     Required: =false
                     Update: =DataCardValue3.Text
                     Visible: =VarCommunication
                     Width: =Parent.Width
-                    X: =0
+                    X: =333
                     Y: =6
                     ZIndex: =1
+
+                    Rectangle7 As rectangle:
+                        BorderColor: =RGBA(237, 237, 237, 1)
+                        Fill: =RGBA(237, 237, 237, 1)
+                        Height: =96
+                        Width: =Parent.Width-60
+                        X: =30
+                        ZIndex: =1
 
                     DataCardKey3 As label:
                         AutoHeight: =true
@@ -836,18 +847,22 @@ EstimateScreen As screen:
                         Wrap: =false
                         X: =60
                         Y: =10
-                        ZIndex: =1
+                        ZIndex: =2
 
                     DataCardValue3 As text:
                         BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                         Default: =Parent.Default
                         DelayOutput: =true
+                        DisabledColor: =RGBA(0, 0, 0, 1)
+                        DisabledFill: =RGBA(0, 0, 0, 0)
                         DisplayMode: =Parent.DisplayMode
+                        Fill: =RGBA(0, 0, 0, 0)
                         Font: =Font.Arial
-                        HoverBorderColor: =RGBA(0, 0, 0, 1)
+                        HoverBorderColor: =RGBA(202, 202, 202, 1)
                         HoverFill: =RGBA(0, 0, 0, 0)
                         MaxLength: =Parent.MaxLength
                         PaddingLeft: =5
+                        PressedFill: =
                         RadiusBottomLeft: =0
                         RadiusBottomRight: =0
                         RadiusTopLeft: =0
@@ -857,7 +872,7 @@ EstimateScreen As screen:
                         Width: =Parent.Width - 120
                         X: =60
                         Y: =DataCardKey3.Y + DataCardKey3.Height + 5
-                        ZIndex: =2
+                        ZIndex: =3
 
                     ErrorMessage3 As label:
                         AutoHeight: =true
@@ -872,7 +887,7 @@ EstimateScreen As screen:
                         Width: =Parent.Width - 60
                         X: =30
                         Y: =DataCardValue3.Y + DataCardValue3.Height
-                        ZIndex: =3
+                        ZIndex: =4
 
                     StarVisible3 As label:
                         Align: =Align.Center
@@ -882,25 +897,34 @@ EstimateScreen As screen:
                         Width: =30
                         Wrap: =false
                         Y: =DataCardKey3.Y
-                        ZIndex: =4
+                        ZIndex: =5
 
                 CustomerContactES As typedDataCard.textualEditCard:
-                    BorderColor: =RGBA(0, 0, 0, 1)
+                    BorderColor: =RGBA(202, 202, 202, 1)
                     BorderStyle: =BorderStyle.Solid
+                    BorderThickness: =0
                     DataField: ="shlrf_customercontact"
                     Default: =ThisItem.'CustomerContact '
                     DisplayMode: =Parent.DisplayMode
                     DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_customercontact")
-                    Fill: =RGBA(0, 0, 0, 0)
+                    Fill: =RGBA(255, 255, 255, 1)
                     Height: =50
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_customercontact")
                     Required: =false
                     Update: =IntxtContactNumberES.Text
                     Visible: =VarCommunication
                     Width: =Parent.Width
-                    X: =0
+                    X: =30
                     Y: =7
                     ZIndex: =1
+
+                    Rectangle7_1 As rectangle:
+                        BorderColor: =RGBA(237, 237, 237, 1)
+                        Fill: =RGBA(237, 237, 237, 1)
+                        Height: =96
+                        Width: =Parent.Width-60
+                        X: =30
+                        ZIndex: =1
 
                     lblContactES As label:
                         AutoHeight: =true
@@ -914,23 +938,24 @@ EstimateScreen As screen:
                         Wrap: =false
                         X: =60
                         Y: =10
-                        ZIndex: =1
+                        ZIndex: =2
 
                     IntxtContactNumberES As text:
                         BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                        Clear: =true
+                        BorderThickness: =1
                         Default: =
                         DelayOutput: =true
+                        DisabledBorderColor: =RGBA(202, 202, 202, 1)
                         DisabledFill: =RGBA(0, 0, 0, 0)
                         DisplayMode: =Parent.DisplayMode
                         Format: =TextFormat.Number
                         HintText: =""
-                        HoverBorderColor: =RGBA(0, 0, 0, 1)
+                        HoverBorderColor: =Self.BorderColor
                         HoverFill: =RGBA(0, 0, 0, 0)
                         MaxLength: =10
                         OnChange: |-
-                            =If(Len(IntxtContactNumberES.Text)=10, Set(VarformattedNumber, Text(Value(IntxtContactNumberES.Text), "[$-en-US](###) ###-####"));Set(VarchangeNumber, true), If(!IsBlank(IntxtContactNumberES.Text) && Len(IntxtContactNumberES.Text)<>10, Set(Varerrormessage, true); Set(VarchangeNumber, false)));
-                            Set(varContactNumber,true);
+                            =If(Len(IntxtContactNumberES.Text)=10, Set(VarformattedNumber, Text(Value(IntxtContactNumberES.Text), "[$-en-US](###) ###-####"));Set(varContactNumber, true), If(!IsBlank(IntxtContactNumberES.Text) && Len(IntxtContactNumberES.Text)<>10, Set(Varerrormessage, true); Set(varContactNumber, false)));
+                        OnSelect: =If(varContactNumber=true,Set(varContactNumber,true));
                         PaddingLeft: =5
                         RadiusBottomLeft: =0
                         RadiusBottomRight: =0
@@ -941,7 +966,7 @@ EstimateScreen As screen:
                         Width: =Parent.Width - 120
                         X: =60
                         Y: =lblContactES.Y + lblContactES.Height + 5
-                        ZIndex: =2
+                        ZIndex: =3
 
                     ErrorMessage4 As label:
                         AutoHeight: =true
@@ -956,7 +981,7 @@ EstimateScreen As screen:
                         Width: =Parent.Width - 60
                         X: =30
                         Y: =IntxtContactNumberES.Y + IntxtContactNumberES.Height
-                        ZIndex: =3
+                        ZIndex: =4
 
                     StarVisible4 As label:
                         Align: =Align.Center
@@ -966,20 +991,23 @@ EstimateScreen As screen:
                         Width: =30
                         Wrap: =false
                         Y: =lblContactES.Y
-                        ZIndex: =4
+                        ZIndex: =5
 
                     lblContactNumber As label:
+                        BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                        BorderThickness: =2
+                        DisabledBorderColor: =RGBA(202, 202, 202, 1)
                         Fill: =RGBA(255, 255, 255, 1)
                         Font: =Font.Arial
                         Height: =IntxtContactNumberES.Height
                         OnSelect: =Set(varContactNumber,false);
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Text: =VarformattedNumber
-                        Visible: =VarchangeNumber && varContactNumber
+                        Text: =If(IsBlank(IntxtContactNumberES),"",VarformattedNumber)
+                        Visible: =varContactNumber
                         Width: =IntxtContactNumberES.Width
                         X: =IntxtContactNumberES.X
                         Y: =IntxtContactNumberES.Y
-                        ZIndex: =5
+                        ZIndex: =6
 
             ctnButtonES As groupContainer.verticalAutoLayoutContainer:
                 AlignInContainer: =AlignInContainer.SetByContainer
